--- a/foundation/build.gradle
+++ b/foundation/build.gradle
@@ -20,6 +20,6 @@ dependencies {
     compile "org.reflections:reflections:0.9.11"
     compile "com.google.code.gson:gson:2.8.2"
 
-    compile "org.lwjgl:lwjgl-opengl:3.1.3"
+//    compile "org.lwjgl:lwjgl-opengl:3.1.3"
     compile "com.esotericsoftware:kryo:5.0.0-RC1"
 }
