Resolved dependency issue on TeamCity

--- a/Modules/renderer/build.gradle
+++ b/Modules/renderer/build.gradle
@@ -2,7 +2,7 @@
 eclipse.project.name = appName + '-render-module'
 
 dependencies {
-    prj = findProject(':Photon')
+    def prj = findProject(':Photon')
 
     if(prj != null) {
         compile prj
