Started work on editor module, Implemented standard static and skeletal shaders, Added viewport support to Scene2D

--- a/Modules/renderer/build.gradle
+++ b/Modules/renderer/build.gradle
@@ -3,7 +3,11 @@ eclipse.project.name = appName + '-render-module'
 
 dependencies {
     def prj = findProject(':Photon')
-    
+
+    if(prj == null) {
+        prj = findProject(':photon')
+    }
+
     if(prj != null) {
         compile prj
     } else {
