--- a/foundation/build.gradle
+++ b/foundation/build.gradle
@@ -22,4 +22,6 @@ dependencies {
 
     compile "org.lwjgl:lwjgl-opengl:3.1.3"
     compile "com.esotericsoftware:kryo:5.0.0-RC1"
+
+    compile "org.atteo.classindex:classindex:3.4"
 }
